--- a/Libraries/RosBridgeClient/packages.config
+++ b/Libraries/RosBridgeClient/packages.config
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dahomey.Cbor" version="1.11.2" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net46" />
+  <package id="PeterO.Cbor" version="4.1.0" targetFramework="net48" />
+  <package id="PeterO.Numbers" version="1.5.1" targetFramework="net48" />
+  <package id="PeterO.URIUtility" version="1.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="4.7.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.3" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net48" />
   <package id="System.Text.Json" version="4.7.1" targetFramework="net48" />
   <package id="System.Threading.Channels" version="4.7.0" targetFramework="net46" requireReinstallation="true" />
